<resources>
    <string name="app_name">DemoApiCall</string>
    <string name="doggy">DOGGY</string>
    <string name="date">DATE</string>
    <string name="login">LOGIN</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="passsword">Passsword</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account? </string>
    <string name="create_new">Create New</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>